--- a/vue-stage/index.html
+++ b/vue-stage/index.html
@@ -6,7 +6,9 @@
   <title>Document</title>
 </head>
 <body>
-  <div id="app"></div>
+  <div id="app">
+	  {{name}}
+  </div>
   <script src="./dist/vue.js"></script>
   
   <script>
